--- a/NewsCapturerBeta/src/johnsonyue/newscapturerbeta/dao/DBConfig.properties
+++ b/NewsCapturerBeta/src/johnsonyue/newscapturerbeta/dao/DBConfig.properties
@@ -3,6 +3,6 @@
 #user=root
 #password=
 
-url=jdbc\:mysql\://w.rdc.sae.sina.com.cn\:3307/app_lab2crud?characterEncoding=utf-8
+url=jdbc\:mysql\://w.rdc.sae.sina.com.cn\:3307/app_lab2crud?characterEncoding\=utf-8
 user=5oxlnz0y43
 password=i1mk0j41j02jll540zxz5y0kh22mhh40mxixiwi4
